...
        TabView(selection: $selectedTab) {
            ScheduleView()
                .tag(Tabs.schedule)
                .tabItem {
                    Label("SCHEDULE_TAB_TITLE", systemImage: "list.clipboard")
                }
            Trends()
                .tag(Tabs.trends)
                .tabItem {
                    Label("TRENDS_TAB_TITLE", systemImage: "chart.line.uptrend.xyaxis")
                }
            Profile()
                .tag(Tabs.profile)
                .tabItem {
                    Label("PROFILE_TAB_TITLE", systemImage: "person.fill")
                }
        }
        .onAppear {
...
