...
                        Spacer()
                        VStack {
                            Text("\(steps)")
                                .font(.largeTitle)
                                .fontWeight(.bold)
                                .foregroundColor(color)
                                .accessibility(identifier: "steps_val")
                            Text("steps")
                        }
                        Spacer()
                        VStack {
                            Text("\(restCount)")
                                .font(.largeTitle)
...
                .onAppear {
                    Task {
                        await getAverageDistanceData()
                    }
                }
        }
            else if title == "Average Step Count" {
                HStack(alignment: .firstTextBaseline) {
                    Spacer()
                    Text(String(format: "%.0f", averageSteps))
                        .font(.largeTitle)
                        .fontWeight(.bold)
                        .foregroundColor(color)
...
