//
// This source file is part of the CS342 2023 Utah Team Application project
//
// SPDX-FileCopyrightText: 2023 Stanford University
//
// SPDX-License-Identifier: MIT
//

// MARK: - Onboarding

// MARK: Welcome
"WELCOME_TITLE" = "CardinalKit\nUtah Application";
"WELCOME_SUBTITLE" = "This application demonstrates several CardinalKit features & modules.";

"WELCOME_AREA1_TITLE" = "The CardinalKit Framework";
"WELCOME_AREA1_DESCRIPTION" = "The CardinalKit Framework builds the foundation of this Utah application.";

"WELCOME_AREA2_TITLE" = "Swift Package Manager";
"WELCOME_AREA2_DESCRIPTION" = "CardinalKit uses the Swift Package Manager to import it as a dependency.";

"WELCOME_AREA3_TITLE" = "CardinalKit Modules";
"WELCOME_AREA3_DESCRIPTION" = "CardinalKit offers several modules including HealthKit integration, questionnaires, and more ...";

"WELCOME_BUTTON" = "Learn More";

// MARK: Interesting Modules
"INTERESTING_MODULES_TITLE" = "Interesting Modules";
"INTERESTING_MODULES_SUBTITLE" = "Here are a few CardinalKit modules that are interesting to know about ...";

"INTERESTING_MODULES_AREA1_TITLE" = "Onboarding";
"INTERESTING_MODULES_AREA1_DESCRIPTION" = "The onboarding module allows you to build an onboarding flow like this one.";

"INTERESTING_MODULES_AREA2_TITLE" = "FHIR";
"INTERESTING_MODULES_AREA2_DESCRIPTION" = "The FHIR module provides a CardinalKit standard that can be used as a communication standard between modules.";

"INTERESTING_MODULES_AREA3_TITLE" = "Contact";
"INTERESTING_MODULES_AREA3_DESCRIPTION" = "The contact module allows you to display contact information in your application.";

"INTERESTING_MODULES_AREA4_TITLE" = "HealthKit Data Source";
"INTERESTING_MODULES_AREA4_DESCRIPTION" = "The HealthKit data source module allows you to fetch data from HealthKit and e.g. transform it to FHIR resources.";

"INTERESTING_MODULES_BUTTON" = "Next";


// MARK: Consent
"CONSENT_TITLE" = "Review Consent Form";
"CONSENT_SUBTITLE" = "Review the form below and tap Agree if you’re ready to continue.";

"CONSENT_LOADING_ERROR" = "Please include a markdown based document named \"ConsentDocument\" in your module Bundle.";

// MARK: Account
"ACCOUNT_TITLE" = "Welcome to U-STEP";
"ACCOUNT_SUBTITLE" = "";
"ACCOUNT_SETUP_DESCRIPTION" = "Sign up if this is your first time on the app, or login to an existing account.";
"ACCOUNT_SIGNED_IN_DESCRIPTION" = "You are already signed in with the following account:";
"ACCOUNT_NEXT" = "Continue";
"ACCOUNT_SIGN_UP" = "Sign Up";
"ACCOUNT_LOGIN" = "Login";

"USER_VIEW_LOADING" = "Loading user information ...";

"LOGIN_TITLE" = "Login";
"LOGIN_SUBTITLE" = "Sign in to U-STEP using your email address and password.";

"SIGN_UP_TITLE" = "Sign Up";
"SIGN_UP_SUBTITLE" = "Sign up for U-STEP using your email address and create a password.";


// MARK: HealthKit
"HEALTHKIT_PERMISSIONS_TITLE" = "HealthKit Access";
"HEALTHKIT_PERMISSIONS_SUBTITLE" = "CardinalKit can access data from HealthKit using the HealthKitDataSource module.";
"HEALTHKIT_PERMISSIONS_DESCRIPTION" = "This onboarding step allows you to customize the onboarding flow to explain how the application uses the HealhtKit data and allows a user to cusomize the selection.";
"HEALTHKIT_PERMISSIONS_BUTTON" = "Continue";

// MARK: Task Scheduling
"RESEARCHKIT_TASK_TITLE" = "Edmonton Frail Scale";
"RESEARCHKIT_TASK_DESCRIPTION" = "Please complete this task once a month.";
"RESEARCHKIT_TASK_ACTION" = "Start Task";
