//
// This source file is part of the CS342 2023 Utah Team Application project
//
// SPDX-FileCopyrightText: 2023 Stanford University
//
// SPDX-License-Identifier: MIT
//

import Foundation
import SwiftUI

enum DefaultSettings {
    // Color Slider Values
    static var rValue: Double = 30.0
    static var gValue: Double = 200.0
    static var bValue: Double = 255.0

    // Profile
    static var name: String = "Jiahui Chen"
    static var subtitle: String = "Patient at University of Utah Hospital"
    static var description: String = ""
}
