...
        var steps = [ORKStep]()

        // EDMONTON
        
        // Instruction step
        let instructionStep = ORKInstructionStep(identifier: "IntroStep")
        instructionStep.title = "Patient Questionnaire"
        instructionStep.text = """
        This information will help your doctors keep track of how you feel and how well you are able to do your usual activities. If you are unsure about how to answer a question, please give the best answer you can.

        You will be asked to complete this questionnaire at regular intervals to track your progress over time. You will be able to view your progress in the trends tab.
        """

        steps += [instructionStep]

        // Clock test step
        let clockTestInstructionStep = ORKInstructionStep(identifier: "ClockStep")
        clockTestInstructionStep.title = "Draw a clock"
        clockTestInstructionStep.text = """
        First, we would like you to get out a piece of paper and something to write with.

        Now, we want you to draw a clock.
         (1) Draw a circle
         (2) Put in all of the numbers where they go
...
            steps += [qStep]
        }

        // Walk
        // Instruction step
        let getUpIntroStep = ORKInstructionStep(identifier: "GetUpAndGoIntro")
        getUpIntroStep.title = "Get Up and Go"
        getUpIntroStep.text = """
        We would like you to perform a walking test

        Instructions:
        Sit in a chair with your back and arms resting, when you are ready, click the ‘Next’ button below. Please stand from your seated position and walk at a safe and comfortable pace approximately 3 meters away. Then, click the ‘STOP’ button on the phone.

...
        q8Step.formItems = [q8a, q8b, q8c, q8d, q8e]
        q8Step.isOptional = false
        steps += [q8Step]
 
        // summary
        let summaryStep = ORKCompletionStep(identifier: "SummaryStep")
        summaryStep.title = "Thank you."
        summaryStep.text = "You can view your progress in the trends tab."

        steps += [summaryStep]


        return ORKOrderedTask(identifier: "edmontonVeines", steps: steps)
...
