...
        question.textAlignment = .center
        question.isHidden = true
        addSubview(question)
    }
    func setupUserAnswers() {
        answerButton1.setTitle("1-10 Seconds", for: UIControl.State.normal)
        answerButton2.setTitle("11-20 Seconds", for: UIControl.State.normal)
        answerButton3.setTitle(">21 Seconds", for: UIControl.State.normal)
        
        [answerButton1, answerButton2, answerButton3].forEach {
            $0.titleLabel?.font = UIFont.systemFont(ofSize: 18)
            $0.backgroundColor = .tintColor
            $0.isHidden = true
...
